Added up-to-date application and restructured projects