@@ -1,72 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project>
   <modelVersion>4.0.0</modelVersion>
+  <groupId>incquery.gui.tests</groupId>
+  <artifactId>mainpom</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-  <!-- Change groupId, artifactId and version -->
-  <artifactId>rcpttTests</artifactId>
-  <groupId>IncQueryProject</groupId>
-  <version>1.0.0</version>  
-  <packaging>rcpttTest</packaging>
-
-  <!-- Change properies below to your values -->
-  <properties>
-    <autPath>/usr/eclipse-IncQuery-AUT/</autPath>
-    <runnerPath>/usr/rcptt.runner-incubation-1.5.6-N201504182315.zip</runnerPath>
-	<!--<jacoco.version>0.7.0.201403182114</jacoco.version>-->
-	<!--<jacoco.targetdir>${project.basedir}/target</jacoco.targetdir>-->
-  </properties>
-  
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>com.xored.ci4rcptt</groupId>
-        <artifactId>ci4rcptt-maven-plugin</artifactId>
-        <version>1.5.6-SNAPSHOT</version>
-        <extensions>true</extensions>
-        <configuration>
-          <aut>
-            <explicit>${autPath}</explicit>
-			<vmArgs> 
-				<vmArg>-javaagent:/usr/jacoco/lib/jacocoagent.jar=destfile=/var/lib/jenkins/jobs/EMF-IncQuery-RCPTT-GUI-Tests/workspace/target/jacoco.exec</vmArg>
-				<vmArg>-Xmx1024m</vmArg>
-				<vmArg>-XX:MaxPermSize=512m</vmArg>		
-			</vmArgs>
-          </aut>
-          <runner>
-            <explicit>${runnerPath}</explicit>
-          </runner>
-		  <testOptions>
-			<execTimeout>7200</execTimeout>
-			<testExecTimeout>600</testExecTimeout>
-		  </testOptions>
-		  <skipTags>
-			<skipTag>testToSkip</skipTag>
-		  </skipTags>
-		  
-		  
-		  <!--Remove if you want to run all tests!-->
-		  <suites>
-            <suite>IncQuery Project Tests</suite>
-			<suite>IncQuery Preferences</suite>
-			<suite>IncQuery Query Explorer Tests</suite>
-			<suite>IncQuery Validation framework</suite>
-			<suite>IncQuery Testing Framework</suite>
-			<suite>IncQuery Viewers</suite>
-			<suite>IncQuery Rete Visualizer</suite>
-          </suites>		  
-        </configuration>
-      </plugin>	  
-    </plugins>
-  </build>
-
-
-  
-  <pluginRepositories>
-    <pluginRepository>
-      <id>xored-releases</id>
-      <name>Xored Maven repository</name>
-      <url>http://maven.xored.com/nexus/content/repositories/ci4rcptt-snapshots/</url>
-    </pluginRepository>
-  </pluginRepositories>
+  <modules>
+	    <module>application</module>
+	    <module>rcpttTests</module>
+  </modules>
 
 </project>
